<resources>
    <string name="title_login">Masuk</string>

    <string name="button_login_with_google">Masuk dengan Google</string>
    <string name="button_login_with_facebook">Masuk dengan Facebook</string>

    <string name="hint_username_or_email">Username or Email</string>

    <string name="text_back">Back</string>
    <string name="text_chat">Chat</string>
    <string name="text_or">Atau</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_login_with_fingerprint">Masuk dengan Fingerprint</string>
    <string name="button_forget_password">Lupa Password</string>
    <string name="button_register_now">Daftar sekarang</string>
    <string name="text_not_have_account">Belum punya akun?</string>
    <string name="text_forget_password">Lupa Password</string>
    <string name="text_account_register">Daftar Akun</string>
</resources>