<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.didik.feature_login.ui.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_16dp"
            app:layout_constraintBottom_toBottomOf="@id/titleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/titleTextView"
            app:srcCompat="@drawable/ic_chevron_left" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleTextView"
            style="@style/Heading6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_16dp"
            android:text="@string/title_login"
            android:textColor="@color/greyMineShaft"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/chatIconImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_16dp"
            app:layout_constraintBottom_toBottomOf="@id/titleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/titleTextView"
            app:srcCompat="@drawable/ic_headset" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginGoogleButton"
            style="@style/SocialButton"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_32dp"
            android:paddingVertical="@dimen/size_8dp"
            android:text="@string/button_login_with_google"
            app:icon="@drawable/ic_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginFacebookButton"
            style="@style/SocialButton"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_8dp"
            android:paddingVertical="@dimen/size_8dp"
            android:text="@string/button_login_with_facebook"
            app:icon="@drawable/ic_facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginGoogleButton" />

        <View
            android:id="@+id/dividerLineView"
            style="@style/Body2"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="@dimen/size_1dp"
            android:layout_marginHorizontal="@dimen/size_8dp"
            android:layout_marginTop="@dimen/size_32dp"
            android:background="@color/whiteMercury"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginFacebookButton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingHorizontal="@dimen/size_16dp"
            android:text="@string/text_or"
            android:textColor="@color/greyNobel"
            app:layout_constraintBottom_toBottomOf="@id/dividerLineView"
            app:layout_constraintEnd_toEndOf="@id/dividerLineView"
            app:layout_constraintStart_toStartOf="@id/dividerLineView"
            app:layout_constraintTop_toTopOf="@id/dividerLineView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/InputLayout"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dividerLineView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username_or_email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/size_16dp"
                android:paddingBottom="@dimen/size_16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/InputLayout"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                style="@style/InputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/size_16dp"
                android:paddingBottom="@dimen/size_16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgetPasswordButton"
            style="@style/TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_16dp"
            android:text="@string/button_forget_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            style="@style/Button"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_16dp"
            android:backgroundTint="@color/greenJade"
            android:paddingVertical="@dimen/size_16dp"
            android:text="@string/button_login"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgetPasswordButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginWithFingerprintButton"
            style="@style/Button"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/size_16dp"
            android:layout_marginTop="@dimen/size_8dp"
            android:backgroundTint="@color/white"
            android:paddingVertical="@dimen/size_12dp"
            android:text="@string/button_login_with_fingerprint"
            android:textColor="@color/greenJade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            app:strokeColor="@color/greenJade"
            app:strokeWidth="@dimen/size_1dp" />

        <LinearLayout
            android:id="@+id/registerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginWithFingerprintButton">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_not_have_account"
                android:textColor="@color/greyDove"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButton"
                style="@style/TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_register_now" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>